k8s/apps/alertbridge/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alertbridge-frontend
spec:
  selector:
    app: alertbridge-frontend
  ports:
    - port: 80
      targetPort: 80
